# OrderParser

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  Makefile  README.md  gunicorn.conf.py  pyproject.toml  run.sh  setup.cfg
infra/: docker-compose.yml  docker-pg.yml
infra/nginx/: nginx.local.conf
orderparser/: manage.py
orderparser/api/: admin.py  apps.py  models.py  services.py  tests.py  urls.py
orderparser/api/migrations/: 0001_initial.py  0002_deal_delete_order.py  0003_customer_alter_deal_customer.py  0004_alter_deal_customer.py  0005_item_alter_deal_item.py
orderparser/api/serializers/: __init__.py  deal.py  user.py
orderparser/api/views/: __init__.py  base.py  deal.py  user.py
orderparser/core/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: dev.txt  prod.txt
